--- a/templates/forTest.html
+++ b/templates/forTest.html
@@ -65,7 +65,7 @@
 			</div>
 			<div class="section4 even sec">
 				<h3>Contact Me &#45; Section4</h3>
-				<form method="get" action="#">
+				<form method="post" action="#">
 					<input type="text" name="Fname" placeholder="Type your name">
 					<br>
 					<br>
